Setup routing for notes

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -12,4 +12,7 @@
     <button md-button type="submit">Add</button>
   </form>
 </md-card>
-<router-outlet></router-outlet>
+<section  class="note">
+  <router-outlet></router-outlet>
+</section>
+
