--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,15 +1,29 @@
-<md-card-title>{{list.title}}</md-card-title>
+<header>
+  <md-card-title (click) = 'showTitleForm()'>{{list.title}}</md-card-title>
+  <button md-icon-button [mdMenuTriggerFor]="menu" class="menu-button">
+    <md-icon>more_vert</md-icon>
+  </button>
+  <md-menu #menu="mdMenu">
+    <button md-menu-item>
+      <md-icon>dialpad</md-icon>
+      <span>Delete</span>
+    </button>
+  </md-menu>
+</header>
+
 <a *ngFor = "let note of list.notes" [routerLink] = "['./note', note.id]">
   <md-card class = "list-note">
     <md-card-content>{{note.title}}</md-card-content>
   </md-card>
 </a>
-<md-card>
+
+<button *ngIf = 'formHidden' md-button (click)="showForm()" class="create-note-button">Create note...</button>
+<md-card *ngIf = '!formHidden'>
   <form (ngSubmit) = "createNote()">
     <md-input-container>
-      <input mdInput type="text" name = "title" [(ngModel)]="newNoteTitle" placeholder = "Note title">
+      <input mdInput type="text" name = "title" [(ngModel)]="newNoteTitle" placeholder = "Note title" autofocus>
     </md-input-container>
-    <button md-button type="submit">Add</button>
+    <button md-button type="submit" #addbutton>Add</button>
   </form>
 </md-card>
 <button md-raised-button (click) = "deleteList()" class="delete-button">Delete list</button>
