--- a/src/app/boards/boards.component.html
+++ b/src/app/boards/boards.component.html
@@ -3,12 +3,7 @@
     <md-card-title>{{board.title}}</md-card-title>
   </md-card>
 </a>
-<md-card class = "add-board-form">
-  <form (ngSubmit) = "createBoard()">
-    <md-input-container>
-      <input mdInput type="text" name = "title" [(ngModel)]="newBoardTitle" placeholder = "Board's title">
-    </md-input-container>
-    <button md-button type="submit">Add</button>
-  </form>
-</md-card>
+<app-create-form (dataCreated)="createBoard($event)">
+  <span>Create board...</span>
+</app-create-form>
 
