--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,12 +1,15 @@
 <header>
-  <md-card-title (click) = 'showTitleForm()'>{{list.title}}</md-card-title>
+  <app-editable-text (textEdited)="editTitle($event)" [text]="list.title">
+    <md-card-title>{{list.title}}</md-card-title>
+  </app-editable-text>
+
   <button md-icon-button [mdMenuTriggerFor]="menu" class="menu-button">
     <md-icon>more_vert</md-icon>
   </button>
-  <md-menu #menu="mdMenu">
-    <button md-menu-item>
-      <md-icon>dialpad</md-icon>
-      <span>Delete</span>
+  <md-menu #menu="mdMenu" xPosition="before">
+    <button md-menu-item (click) = "deleteList()">
+      <md-icon>delete</md-icon>
+      <span>Delete list</span>
     </button>
   </md-menu>
 </header>
@@ -17,14 +20,8 @@
   </md-card>
 </a>
 
-<button *ngIf = 'formHidden' md-button (click)="showForm()" class="create-note-button">Create note...</button>
-<md-card *ngIf = '!formHidden'>
-  <form (ngSubmit) = "createNote()">
-    <md-input-container>
-      <input mdInput type="text" name = "title" [(ngModel)]="newNoteTitle" placeholder = "Note title" autofocus>
-    </md-input-container>
-    <button md-button type="submit" #addbutton>Add</button>
-  </form>
-</md-card>
-<button md-raised-button (click) = "deleteList()" class="delete-button">Delete list</button>
+<app-create-form (dataCreated)="createNote($event)">
+  <span>Create note...</span>
+</app-create-form>
+
 
