--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -11,6 +11,10 @@
       <md-icon>delete</md-icon>
       <span>Delete list</span>
     </button>
+    <button md-menu-item (click) = "openMoveListDialog()">
+      <md-icon>forward</md-icon>
+      <span>Move list</span>
+    </button>
   </md-menu>
 </header>
 
