Add functionality for moving and copying boards, lists and notes

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -11,6 +11,10 @@
         <md-icon>delete</md-icon>
         <span>Delete board</span>
       </button>
+      <button md-menu-item (click) = "copyBoard()">
+        <md-icon>content_copy</md-icon>
+        <span>Copy board</span>
+      </button>
     </md-menu>
 </header>
 
