--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -15,6 +15,10 @@
       <md-icon>forward</md-icon>
       <span>Move list</span>
     </button>
+    <button md-menu-item (click) = "copyList()">
+      <md-icon>content_copy</md-icon>
+      <span>Copy list</span>
+    </button>
   </md-menu>
 </header>
 
