Improve the  move feature

--- a/src/app/create-form/create-form.component.html
+++ b/src/app/create-form/create-form.component.html
@@ -1,10 +1,10 @@
 <button *ngIf = 'formHidden' md-button (click)="showForm()" class="create-note-button">
   <ng-content></ng-content>
 </button>
-<md-card *ngIf="!formHidden">
+<div *ngIf="!formHidden">
   <form (ngSubmit) = "create()">
     <md-input-container>
-      <input mdInput type="text" name = "title" [(ngModel)]="title" placeholder = "Title">
+      <input mdInput type="text" name = "title" [(ngModel)]="title" placeholder = "Title" autofocus>
     </md-input-container>
     <button md-icon-button type="submit">
       <md-icon>done</md-icon>
@@ -13,4 +13,4 @@
       <md-icon>clear</md-icon>
     </button>
   </form>
-</md-card>
+</div>
