--- a/src/app/move-list-dialog/move-list-dialog.component.html
+++ b/src/app/move-list-dialog/move-list-dialog.component.html
@@ -1,12 +1,5 @@
-<form (ngSubmit)="moveList()">
-  <md-input-container>
-    <input type="text" mdInput [formControl] = "boardControl" [mdAutocomplete] = "auto">
-  </md-input-container>
-  <md-autocomplete #auto = "mdAutocomplete" [displayWith]="displayFn">
-    <md-option *ngFor="let board of filteredBoards | async" [value]="board">
-      {{ board.title }}
-    </md-option>
-  </md-autocomplete>
-  <button type="submit" md-button>Move</button>
-</form>
+<md-select placeholder="Board" [(ngModel)]="selectedBoard">
+  <md-option *ngFor="let board of boards" [value]="board">{{ board.title }}</md-option>
+</md-select>
+<button md-button (click)="moveList()" [disabled]="!selectedBoard">Move</button>
 
