--- a/src/app/note-dialog/note-dialog.component.css
+++ b/src/app/note-dialog/note-dialog.component.css
@@ -1,1 +1,29 @@
+.note-wrapper{
+  display: flex;
+}
 
+.note-title{
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.add-description-button{
+  padding: 0;
+  display: block;
+}
+
+.note-content{
+  flex: auto;
+  margin-right: 10px;
+}
+
+.menu-button{
+  width: 90px;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.note-menu{
+  width: 100px;
+}
