--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -1,5 +1,8 @@
-<a [routerLink] = "['/boards']">
-  <h1>
-    My Boards
-  </h1>
-</a>
+<div class="app-header">
+  <a [routerLink] = "['/boards']">
+    <h3>
+      NOTES Board
+    </h3>
+  </a>
+</div>
+
