--- a/src/app/board/board.component.css
+++ b/src/app/board/board.component.css
@@ -1,16 +1,16 @@
 header{
   display: flex;
-  height: 30px;
+  flex-direction: row;
   padding: 10px 0;
   margin-bottom: 15px;
-  background-color: #9CCC65;
+  background: #00acc1;
 }
-header h2{
-  padding: 0 0 0 10px;
-  margin: 0;
-  line-height: 100%;
-  vertical-align: middle;
-  flex: 1;
+
+.board-title{
+  flex: auto;
+  margin: 0 0 0 10px;
+  font-weight: 500;
+  font-size: 24px;
 }
 
 .menu-button md-icon{
@@ -18,7 +18,27 @@ header h2{
 }
 
 .app-list{
+  width: 260px;
+  padding: 10px;
+  border-radius: 5px;
   float: left;
-  margin-right: 10px;
-  background-color: #8BC34A;
+  margin: 0 10px;
+  background-color: #5ddef4;
+  height: 100%;
+}
+
+.create-button {
+  margin: 20px 15px;
+  text-decoration: underline;
+  display: inline-block;
+  width: 260px;
+}
+
+.lists-wrapper {
+  overflow-y: auto;
+  display: flex;
+}
+
+.lists-wrapper > * {
+  flex: none;
 }
