--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -1,8 +1,8 @@
 <div class="app-header">
   <a [routerLink] = "['/boards']">
-    <h3>
+    <div class="title">
       NOTES Board
-    </h3>
+    </div>
   </a>
 </div>
 
