--- a/src/app/boards/boards.component.html
+++ b/src/app/boards/boards.component.html
@@ -1,11 +1,15 @@
-<a *ngFor = "let board of boards" [routerLink]="['/board', board.id]">
-  <md-card class = "board-card">
-    <md-card-title>{{board.title}}</md-card-title>
-  </md-card>
-</a>
+<div class="wrapper">
+  <a *ngFor = "let board of boards" [routerLink]="['/board', board.id]">
+    <md-card class = "board-card">
+      <md-card-title [title] = 'board.title'>{{board.title}}</md-card-title>
+      <p>Lists: {{board.lists.length}}</p>
+    </md-card>
+  </a>
 
-<app-create-form (dataCreated)="createBoard($event)">
-  <span>Create board...</span>
-</app-create-form>
+  <app-create-form (dataCreated)="createBoard($event)">
+    <span>Create board...</span>
+  </app-create-form>
+</div>
+
 
 
